--- a/conftask/static/css/conftask.css
+++ b/conftask/static/css/conftask.css
@@ -2,10 +2,6 @@
 
 /* Personalizacion vista*/
 
-.scrollmargin {
-  height: 50px;
-  text-align: center;
-}
 *,
 ::after,
 ::before {
@@ -14,7 +10,7 @@
 /* div {
   display: block;
 } */
-.container {
+.contenedor {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
@@ -22,23 +18,23 @@
   margin-left: auto;
 }
 /* @media (min-width: 1200px)
-.container {
+.contenedor {
     max-width: 1140px;
 }
 
 @media (min-width: 992px)
-.container {
+.contenedor {
     max-width: 960px;
 }
 @media (min-width: 768px)
-.container {
+.contenedor {
     max-width: 720px;
 }
 @media (min-width: 576px)
-.container {
+.contenedor {
     max-width: 540px;
 } */
-.row {
+.linea {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -46,19 +42,19 @@
   margin-right: -15px;
   margin-left: -15px;
 }
-.col-sm-12 {
+.columna-sm-12 {
   position: relative;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
 }
 /* @media (min-width: 576px)
-.col-sm-12 {
+.columna-sm-12 {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 } */
-.card {
+.tarjeta {
   position: relative;
   display: -ms-flexbox;
   display: flex;
@@ -71,19 +67,19 @@
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
-.text-center {
+.texto-centrar {
   text-align: center !important;
 }
-.card-header {
+.tarjeta-encabezado {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
-.bg-header {
+.bg-encabezado {
   background-color: rgba(43, 100, 71, 0.8);
 }
-.card-header:first-child {
+.tarjeta-encabezado:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
 }
 dl,
@@ -92,7 +88,7 @@ ul {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-.nav {
+.navegacion {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -101,16 +97,16 @@ ul {
   margin-bottom: 0;
   list-style: none;
 }
-.nav-tabs {
+.navegacion-solapa {
   border-bottom: 1px solid #dee2e6;
 }
-.card-header-tabs {
+.tarjeta-encabezado-solapa {
   margin-right: -0.625rem;
   margin-bottom: -0.75rem;
   margin-left: -0.625rem;
   border-bottom: 0;
 }
-.nav-tabs .nav-item {
+.navegacion-solapa .navegacion-item {
   margin-bottom: -1px;
 }
 a {
@@ -118,11 +114,11 @@ a {
   text-decoration: none;
   background-color: transparent;
 }
-.nav-link {
+.navegacion-link {
   display: block;
   padding: 0.5rem 1rem;
 }
-.nav-tabs .nav-link {
+.navegacion-solapa .navegacion-link {
   border: 2px solid transparent;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
@@ -131,8 +127,8 @@ a:not([href]):not([tabindex]) {
   color: inherit;
   text-decoration: none;
 }
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active {
+.navegacion-solapa .navegacion-item.show .navegacion-link,
+.navegacion-solapa .navegacion-link.activo {
   color: #495057;
   background-color: #fff;
   border-color: #dee2e6 #dee2e6 #fff;
@@ -141,7 +137,7 @@ b,
 strong {
   font-weight: bolder;
 }
-.card-body {
+.tarjeta-cuerpo {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
@@ -188,12 +184,12 @@ input[type="file"].hidden {
   width: 15rem;
   margin-left: -15rem;
 }
-input.binario.col-sm-4 {
+input.binario.columna-sm-4 {
   /* width: 159px; */
   height: 30px;
   max-width: 37%;
 }
-.col-sm-6 {
+.columna-sm-6 {
   position: relative;
   width: 50%;
   padding-right: 15px;
@@ -201,12 +197,12 @@ input.binario.col-sm-4 {
   margin-bottom: 20px;
 }
 /* @media (min-width: 576px)
-.col-sm-6 {
+.columna-sm-6 {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
 } */
-.input-group {
+.input-grupo {
   position: relative;
   display: -ms-flexbox;
   display: flex;
@@ -217,16 +213,8 @@ input.binario.col-sm-4 {
   width: 80%;
   height: 39px;
 }
-.input-group-append,
-.input-group-prepend {
-  display: -ms-flexbox;
-  display: flex;
-}
-.input-group-prepend {
-  margin-right: -1px;
-  height: 25px;
-}
-.input-group-text {
+
+.input-grupo-texto {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -243,10 +231,6 @@ input.binario.col-sm-4 {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
-.input-group > .input-group-prepend > .input-group-text {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
 button,
 select {
   text-transform: none;
@@ -254,7 +238,7 @@ select {
 select {
   word-wrap: normal;
 }
-.custom-select {
+.personalizar-seleccionar {
   display: inline-block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
@@ -273,24 +257,24 @@ select {
   -moz-appearance: none;
   appearance: none;
 }
-.custom-control-label::before,
-.custom-file-label,
-.custom-select {
+.personalizar-control-etiqueta::before,
+.personalizar-mostrar-etiqueta,
+.personalizar-seleccionar {
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
     box-shadow 0.15s ease-in-out;
 }
-.input-group > .custom-file,
-.input-group > .custom-select,
-.input-group > .form-control,
-.input-group > .form-control-plaintext {
+.input-grupo > .personalizar-mostrar,
+.input-grupo > .personalizar-seleccionar,
+.input-grupo > .formar-control,
+.input-grupo > .formar-control-plaintext {
   position: relative;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   width: 1%;
   margin-bottom: 0;
 }
-.input-group > .custom-select:not(:first-child),
-.input-group > .form-control:not(:first-child) {
+.input-grupo > .personalizar-seleccionar:not(:first-child),
+.input-grupo > .formar-control:not(:first-child) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   height: 25px;
@@ -318,10 +302,10 @@ legend {
   width: auto;
   color: #2b6447;
 }
-.form-group {
+.formar-grupo {
   margin-bottom: 1rem;
 }
-.col-sm-3 {
+.columna-sm-3 {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -331,19 +315,19 @@ legend {
   max-width: 25%;
 }
 /* @media (min-width: 576px)
-.col-sm-3 {
+.columna-sm-3 {
     -ms-flex: 0 0 25%;
     flex: 0 0 25%;
     max-width: 25%;
 } */
-.col-form-label {
+.columna-formar-etiqueta {
   padding-top: calc(0.375rem + 1px);
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5;
 }
-.col-sm-4 {
+.columna-sm-4 {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -353,12 +337,12 @@ legend {
   max-width: 33.333333%;
 }
 /* @media (min-width: 576px)
-.col-sm-4 {
+.columna-sm-4 {
     -ms-flex: 0 0 33.333333%;
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
 } */
-.col-md {
+.columna-md {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -370,21 +354,21 @@ legend {
   max-width: 100%;
 }
 /* @media (min-width: 768px)
-.col-md {
+.columna-md {
     -ms-flex-preferred-size: 0;
     flex-basis: 0;
     -ms-flex-positive: 1;
     flex-grow: 1;
     max-width: 100%;
 } */
-.col-md-6 {
+.columna-md-6 {
   position: relative;
   width: 50%;
   padding-right: 15px;
   padding-left: 65px;
 }
 /* @media (min-width: 768px)
-.col-md-6 {
+.columna-md-6 {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
@@ -393,7 +377,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-.form-row {
+.formar-linea {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -402,17 +386,17 @@ p {
   margin-left: -5px;
 }
 /* @media (min-width: 768px)
-.col-md-6 {
+.columna-md-6 {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
 } */
-.form-row > .col,
-.form-row > [class*="col-"] {
+.formar-linea > .columna,
+.formar-linea > [class*="columna-"] {
   padding-right: 5px;
   padding-left: 5px;
 }
-.form-control {
+.formar-control {
   display: block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
@@ -427,7 +411,7 @@ p {
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.custom-select-sm {
+.personalizar-seleccionar-sm {
   height: calc(1.5em + 0.5rem + 2px);
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -437,7 +421,7 @@ p {
 table {
   border-collapse: collapse;
 }
-.table {
+.tabla {
   width: 100%;
   margin-bottom: 1rem;
   color: #212529;
@@ -445,13 +429,13 @@ table {
 th {
   text-align: inherit;
 }
-.table td,
-.table th {
+.tabla td,
+.tabla th {
   padding: 0.75rem;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
 }
-.table thead th {
+.tabla thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
 }
